--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Setup credentials to access private repositories
+      run: git config --global url.https://${{ secrets.MY_PAT }}@github.com/.insteadOf https://github.com/
+
     - name: Configure Git identity
       run: |
         git config --global user.name "github-actions[bot]"
